Refactor organization code
